--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-signature-canvas": "^1.1.0-alpha.1",
+    "reactstrap": "^9.2.3",
     "ua-parser-js": "^2.0.2"
   },
   "devDependencies": {
