--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.4.7",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^12.4.5",
