--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "eventemitter3": "^5.0.1",
     "framer-motion": "^12.4.5",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
